apps/.disabled/comfyui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comfyui
  namespace: comfyui
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: comfyui.wevelsiep.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: comfyui
                port:
                  number: 80
